kubernetes/gitea/ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-web
  namespace: traefik
spec:
  routes:
    - match: Host(`git.axis.scottmckendry.tech`)
      kind: Rule
      middlewares:
        - name: forwardauth
          namespace: traefik
      services:
        - name: gitea-http
          namespace: gitea
          port: 3000
  tls:
    secretName: axis-tls
